# refget

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  OLD_Dockerfile  README.md  README_seqcolapi.md  array_overlap.py  changelog.md  create_compliance_answers.py  demo_remote_sequences.py  deprecated.py  interactive_tests.py  list_demo_data.py  load_demo_data.py  load_pangenome_reference.py  mkdocs.yml  models_notes.md  package-lock.json  pyproject.toml  setup.py
.github/: dependabot.yml
data_loaders/: compute_pangenome_digests.py  demo_build_store.py  demo_remote_store.py  load_brickyard_fasta_pep.py  load_demo_seqcols.py  load_demo_sequences.py  load_fasta_pep.py  load_pangenome_pep.py  load_pangenome_reference.py  load_ref_fasta_pep.py  pangenome_digests.json  upload_fasta_to_s3.py
demo_fasta/: compare-0vs1.json  compare-1vs1.json  compare-5vs6.json  demo.fa  demo1.fa.fai  demo2.fa  demo3.fa  demo3.fa.fai  demo4.fa  demo4.fa.fai  demo5.fa  demo5.fa.fai  demo6.fa
deployment/: demo_up.sh  store_demo_up.sh
deprecated/: agent_updates.py  seqcol.py
docs/: README.md  changelog.md
docs_jupyter/: tutorial.ipynb
examples/: capture_outputs.py  remote_store.py
frontend/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  wrangler.toml
refget/: __init__.py  _version.py  agents.py  backend.py  clients.py  compliance.py  const.py  conversion.py  digest_functions.py  digests.py  examples.py  exceptions.py  hash_functions.py  middleware.py  models.py  refget.py  refget_router.py  refget_store.py  router.py  seqcol.py  seqcol_client.py  seqcol_router.py  store.py  utilities.py  utils.py  (+1 more)
refget-r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  install_and_test.sh
(+357 files in other folders)
