[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refget"
dynamic = ["version"]
description = "GA4GH refget - reference sequence and sequence collection tools"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Sheffield", email = "nathan@code.databio.org" },
    { name = "Michal Stolarczyk" },
]
keywords = ["genome", "assembly", "bioinformatics", "reference", "sequence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "gtars>=0.8.0",
    "jsonschema",
    "pyyaml",
    "requests",
    "sqlmodel",
    "tomli_w",
    "typer>=0.9.0",
]

[project.scripts]
refget = "refget.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov>=6.0.0"]
seqcolapi = [
    "fastapi",
    "psycopg2-binary",
    "sqlmodel",
    "uvicorn>=0.30.0",
    "ubiquerg>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/refgenie/refget"

[tool.hatch.version]
path = "refget/_version.py"

[tool.ruff]
line-length = 99
exclude = [
    "array_overlap.py",
    "create_compliance_answers.py",
    "data_loaders",
    "interactive_tests.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["refget"]

[tool.pytest.ini_options]
testpaths = ["tests/local"]
addopts = "-p no:asyncio"
